# AITIC-reception

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md
backend/: .env.example  README.md  pyproject.toml
backend/app/: main.py
backend/app/adapters/: base.py
backend/app/api/: adapters.py  cards.py  debug.py  deps.py  imports.py  logs.py  settings.py  templates.py  visits.py  ws.py
backend/app/core/: backup.py  config.py  db.py  event_bus.py  logging.py  seed.py  settings_store.py
backend/app/models/: __init__.py  adapter_status.py  nfc_write_log.py  verify_log.py  visit.py  welcome_template.py  work_log.py
backend/fixtures/: generate_sample_visitors.py  sample_visitors.xlsx
backend/tests/: _swagger_walkthrough_substitute.py  conftest.py  test_adapter_status_service.py  test_adapters_base.py  test_adapters_mock.py  test_ai_adapter_real.py  test_ai_writeup_service.py  test_api_cards.py  test_api_debug.py  test_api_imports.py  test_api_imports_pii.py  test_api_logs.py  test_api_logs_export.py  test_api_settings.py  test_api_templates.py  test_api_visits.py  test_backup.py  test_card_service.py  test_config.py  test_db.py  test_e2e_onsite_welcome.py  test_end_to_end.py  test_event_bus.py  test_excel_watcher.py  test_fixture_pipeline.py  test_led_mock.py  test_log_service.py  test_main.py  test_manual_card_write.py  test_models.py  test_onsite_welcome_service.py  test_registration_service.py  test_schemas.py  test_tts_interface.py  test_tts_real_adapter.py  test_verify_service.py  test_verify_service_state_machine.py  test_ws_led_topic.py  test_ws_realtime.py
(+69 files in other folders)
