[project]
name = "aitic-reception-backend"
version = "0.1.0"
description = "AITIC 展厅智能前台 · 后端服务"
readme = "../README.md"
requires-python = ">=3.13"
dependencies = [
    "apscheduler>=3.11.3",
    "fastapi>=0.139.0",
    "httpx[socks]>=0.28.1",
    "openpyxl>=3.1.5",
    "pandas>=3.0.3",
    "pydantic-settings>=2.14.2",
    "python-multipart>=0.0.32",
    "pyttsx3>=2.99",
    "sqlalchemy>=2.0.51",
    "uvicorn[standard]>=0.49.0",
    "watchdog>=6.0.0",
    "websockets>=16.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["."]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
]
